fix: restored all update options add: option for concurrency simulation