@@ -8,51 +8,75 @@ import java.util.stream.*;
 import models.*;
 
 public class FileUtils {
+
     private static final Path FILE = Paths.get("src", "data", "projects_data.json");
 
-    public static void saveAll(List<UserCatalog> users, List<ProjectCatalog> projects, List<TaskCatalog> tasks) {
-        StringBuilder sb = new StringBuilder();
-        sb.append("{\n");
-        // Users
-        sb.append("  \"users\": [\n");
-        for (int i = 0; i < users.size(); i++) {
-            UserCatalog u = users.get(i);
-            sb.append(String.format("    {\"id\": \"%s\", \"name\": \"%s\", \"password\": \"%s\", \"status\": \"%s\", \"type\": \"%s\", \"email\": \"%s\"}%s\n",
-                u.getId(), u.getName(), u.getPassword(), u.getStatus().name(), u.getClass().getSimpleName(), u.getEmail(),
-                (i < users.size() - 1) ? "," : ""));
+    // ===================== SAVE =====================
+    public static void saveAll(List<UserCatalog> users,
+                               List<ProjectCatalog> projects,
+                               List<TaskCatalog> tasks) {
+
+        List<String> lines = new ArrayList<>();
+
+        /* ================= USERS ================= */
+        lines.add("[USERS]");
+        for (UserCatalog u : users) {
+            lines.add(String.join("|",
+                    "U",
+                    u.getId(),
+                    u.getName(),
+                    u.getPassword(),
+                    u.getStatus().name(),
+                    u.getClass().getSimpleName(),
+                    u.getEmail()
+            ));
         }
-        sb.append("  ],\n");
-        // Projects
-        sb.append("  \"projects\": [\n");
-        for (int i = 0; i < projects.size(); i++) {
-            ProjectCatalog p = projects.get(i);
-            sb.append(String.format("    {\"id\": \"%s\", \"name\": \"%s\", \"description\": \"%s\", \"category\": \"%s\", \"deadline\": \"%s\", \"type\": \"%s\"}%s\n",
-                p.getProjectID(), p.getProjectName(), p.getProjectDescription(), p.getProjectCategory(), p.getProjectDeadline(), p.getClass().getSimpleName(),
-                (i < projects.size() - 1) ? "," : ""));
+
+        /* ================= PROJECTS ================= */
+        lines.add("[PROJECTS]");
+        for (ProjectCatalog p : projects) {
+            lines.add(String.join("|",
+                    "P",
+                    p.getProjectID(),
+                    p.getProjectName(),
+                    p.getProjectDescription(),
+                    p.getProjectCategory(),
+                    p.getProjectDeadline(),
+                    p.getClass().getSimpleName()
+            ));
         }
-        sb.append("  ],\n");
-        // Tasks
-        sb.append("  \"tasks\": [\n");
-        for (int i = 0; i < tasks.size(); i++) {
-            TaskCatalog t = tasks.get(i);
-            sb.append(String.format("    {\"id\": \"%s\", \"name\": \"%s\", \"description\": \"%s\", \"status\": \"%s\", \"assignedUser\": \"%s\", \"projectId\": \"%s\"}%s\n",
-                t.getTaskId(), t.getTaskName(), t.getTaskDescription(), t.getTaskStatus().name(), t.getAssignedUserId(), t.getProjectID(),
-                (i < tasks.size() - 1) ? "," : ""));
+
+        /* ================= TASKS ================= */
+        lines.add("[TASKS]");
+        for (TaskCatalog t : tasks) {
+            lines.add(String.join("|",
+                    "T",
+                    t.getTaskId(),
+                    t.getTaskName(),
+                    t.getTaskDescription(),
+                    t.getTaskStatus().name(),
+                    t.getAssignedUserId(),
+                    t.getProjectID()
+            ));
         }
-        sb.append("  ]\n");
-        sb.append("}\n");
+
         try {
-            Files.writeString(FILE, sb.toString(), StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING);
-            System.out.println("[INFO] Data saved to " + FILE.toString());
+            Files.write(FILE, lines,
+                    StandardOpenOption.CREATE,
+                    StandardOpenOption.TRUNCATE_EXISTING);
+            System.out.println("[INFO] Data saved to " + FILE.toAbsolutePath());
         } catch (IOException e) {
             System.err.println("[ERROR] Failed to save data: " + e.getMessage());
         }
     }
 
+    // ===================== LOAD =====================
     public static Map<String, List<?>> loadAll() {
+
         List<UserCatalog> users = new ArrayList<>();
         List<ProjectCatalog> projects = new ArrayList<>();
         List<TaskCatalog> tasks = new ArrayList<>();
+
         if (!Files.exists(FILE)) {
             System.out.println("[INFO] No persistence file found. Starting fresh.");
             Map<String, List<?>> result = new HashMap<>();
@@ -61,16 +85,33 @@ public class FileUtils {
             result.put("tasks", tasks);
             return result;
         }
+
         try (Stream<String> stream = Files.lines(FILE)) {
+
             String section = "";
+
             for (String line : (Iterable<String>) stream::iterator) {
-                if (line.equals("[USERS]")) { section = "USERS"; continue; }
-                if (line.equals("[PROJECTS]")) { section = "PROJECTS"; continue; }
-                if (line.equals("[TASKS]")) { section = "TASKS"; continue; }
+
+                if (line.equals("[USERS]")) {
+                    section = "USERS";
+                    continue;
+                }
+                if (line.equals("[PROJECTS]")) {
+                    section = "PROJECTS";
+                    continue;
+                }
+                if (line.equals("[TASKS]")) {
+                    section = "TASKS";
+                    continue;
+                }
+
                 if (line.isBlank() || line.startsWith("#")) continue;
+
                 String[] parts = line.split("\\|");
+
                 try {
                     switch (section) {
+
                         case "USERS" -> {
                             if (parts.length >= 7) {
                                 String type = parts[5];
@@ -81,6 +122,7 @@ public class FileUtils {
                                 users.add(user);
                             }
                         }
+
                         case "PROJECTS" -> {
                             if (parts.length >= 7) {
                                 String type = parts[6];
@@ -90,23 +132,33 @@ public class FileUtils {
                                 projects.add(project);
                             }
                         }
+
                         case "TASKS" -> {
                             if (parts.length >= 7) {
-                                TaskCatalog task = new TaskCatalog(parts[1], parts[2], parts[3], parts[6]);
+                                TaskCatalog task = new TaskCatalog(
+                                        parts[1],
+                                        parts[2],
+                                        parts[3],
+                                        parts[6]
+                                );
                                 task.setTaskStatus(TaskStatus.valueOf(parts[4]));
                                 task.setAssignedUserId(parts[5]);
                                 tasks.add(task);
                             }
                         }
                     }
+
                 } catch (Exception e) {
                     System.err.println("[WARN] Malformed line skipped: " + line);
                 }
             }
-            System.out.println("[INFO] Data loaded from " + FILE.toString());
+
+            System.out.println("[INFO] Data loaded from " + FILE.toAbsolutePath());
+
         } catch (IOException e) {
             System.err.println("[ERROR] Failed to load data: " + e.getMessage());
         }
+
         Map<String, List<?>> result = new HashMap<>();
         result.put("users", users);
         result.put("projects", projects);
